<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:onClick="flipCard"

   >


    <ImageView

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:tint="@color/cardBack"
        android:padding="16dp"
        android:src="@drawable/rectangle"

       />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="68dp"
        android:text="@string/Pizza"
        android:textColor="@color/white"
        android:onClick="findViews1"
        />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="28dp"
        android:text="@string/Coffee"
        android:textColor="@color/white"         />
    <CheckBox
        android:id="@+id/checkBox22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="108dp"
        android:text="@string/Dum_Aloo"
        android:textColor="@color/white"         />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:onClick="flipCard"

        android:text="@string/Swipe_here" />


</FrameLayout>