<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:onClick="flipCard3">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:tint="@color/cardBack"
        android:padding="16dp"
        android:src="@drawable/rectangle"/>
    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="68dp"
        android:text="@string/Idli"
        android:textColor="@color/white"        />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="28dp"
        android:text="@string/Dosa"
        android:textColor="@color/white"         />
    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="112dp"
        android:text="@string/Vada_pav"
        android:textColor="@color/white"         />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:onClick="flipCard3"

        android:text="@string/Swipe_here" />



</FrameLayout>