<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:onClick="flipCard2">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:tint="@color/cardBack"
        android:padding="16dp"
        android:src="@drawable/rectangle"/>
    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="68dp"
        android:text="@string/Chicken_Leg"
        android:textColor="@color/white"        />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="28dp"
        android:text="@string/Prawns"
        android:textColor="@color/white"         />
    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="112dp"
        android:text="@string/Salmon"
        android:textColor="@color/white"         />
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/Swipe_here"
        android:layout_below="@+id/abc"
        android:onClick="flipCard2"
        />



</FrameLayout>