<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:onClick="flipCard1"
   >



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:tint="@color/cardBack"
        android:padding="16dp"
        android:src="@drawable/rectangle"

        />
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="68dp"
        android:text="@string/Pasta"

        android:textColor="@color/white"        />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="28dp"
        android:text="@string/Noodles"
        android:textColor="@color/white"         />
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="112dp"
        android:text="@string/Momo"
        android:textColor="@color/white"         />


    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/Swipe_here"
        android:layout_below="@+id/abc"
        android:onClick="flipCard1"
        />
</FrameLayout>